--- a/fairyTail.html
+++ b/fairyTail.html
@@ -10,7 +10,9 @@
     <h1>동화 목록</h1>
     <li>마블-어벤져스</li>
     <li>원피스</li>
-    <li></li>
+    <li>JSP</li>
+    <li>JS</li>
+    <li>SpringBoot</li>
     <li></li>
     <li></li>
     <li></li>
